Se modifico el navbar y se cambiaron algunos icono a Webp

--- a/html/index.html
+++ b/html/index.html
@@ -6,22 +6,77 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/space-age" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <title>Inicio</title>
 </head>
 <body>
     <header>
-        <div class="navbar">
-            <a href="#home"><img src="/img/iconos/Insta.png" alt=""></a>
-            <a href="#news"><img src="/img/iconos/X.png" alt=""></a>
-            <a href="#contact"><img src="/img/iconos/Youtube.png" alt=""></a>
-            <img src="/img/logos/OrbitSBlanco.png" alt="">
+        <nav>
+            <div class="logo">
+                <a href=""><img src="/img/logos/mainLogo.webp" alt="logo"></a>
+            </div>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Foro</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h1></h1>
         </div>
     </header>
+    <main>
+        <div class="tarjetas contenedor">
+            <div class="tarjeta">
+                <h2>Básico</h2>
+                <p class="precio">9.99$</p>
+                <p class="descripccion">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus similique reprehenderit numquam quod aspernatur. Repellendus necessitatibus itaque accusamus labore esse modi perferendis. Sit, maxime illo? At cupiditate dolore voluptate sint?
+                </p>
+                <button class="comprar">Contáctenos ahora</button>
+            </div>
+        </div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus cumque voluptate neque consequatur fugit beatae adipisci accusamus autem maxime itaque minus architecto, laborum dolores. Distinctio illum perferendis fuga quos possimus?</p>
+    </main>
     <footer>
-
     </footer>
-    <link rel="stylesheet" href="/js/app.js">
 </body>
 </html>
