--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
                 <a href=""><img src="/img/logos/mainLogo.webp" alt="logo"></a>
             </div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="#">Foro</a></li>
